feat: update CatIcon and DogIcon SVGs for improved visuals

--- a/index.html
+++ b/index.html
@@ -56,7 +56,35 @@
         );
 
         const CatIcon = () => (
-            <svg viewBox="0 0 100 100" className="w-full h-full filter drop-shadow-2xl">
+            // <svg viewBox="0 0 100 100" className="w-full h-full filter drop-shadow-2xl">
+            //     <path d="M 20 30 L 10 10 L 35 25 Z" fill="#f97316" stroke="#ea580c" strokeWidth="2" />
+            //     <path d="M 20 28 L 15 15 L 32 26 Z" fill="#fed7aa" />
+            //     <path d="M 80 30 L 90 10 L 65 25 Z" fill="#f97316" stroke="#ea580c" strokeWidth="2" />
+            //     <path d="M 80 28 L 85 15 L 68 26 Z" fill="#fed7aa" />
+            //     <circle cx="50" cy="55" r="35" fill="#f97316" stroke="#ea580c" strokeWidth="2" />
+            //     <ellipse cx="50" cy="60" rx="28" ry="25" fill="#fed7aa" />
+            //     <ellipse cx="38" cy="50" rx="6" ry="10" fill="#065f46" stroke="#064e3b" strokeWidth="1" />
+            //     <ellipse cx="38" cy="48" rx="3" ry="5" fill="#10b981" />
+            //     <circle cx="38" cy="46" r="2" fill="white" />
+            //     <ellipse cx="62" cy="50" rx="6" ry="10" fill="#065f46" stroke="#064e3b" strokeWidth="1" />
+            //     <ellipse cx="62" cy="48" rx="3" ry="5" fill="#10b981" />
+            //     <circle cx="62" cy="46" r="2" fill="white" />
+            //     <path d="M 50 60 L 47 65 L 53 65 Z" fill="#ec4899" />
+            //     <path d="M 50 65 L 50 68" stroke="#ea580c" strokeWidth="2" />
+            //     <path d="M 50 68 Q 42 72 38 70" stroke="#ea580c" strokeWidth="2" fill="none" />
+            //     <path d="M 50 68 Q 58 72 62 70" stroke="#ea580c" strokeWidth="2" fill="none" />
+            //     <line x1="15" y1="55" x2="32" y2="53" stroke="#ea580c" strokeWidth="1.5" />
+            //     <line x1="15" y1="60" x2="32" y2="60" stroke="#ea580c" strokeWidth="1.5" />
+            //     <line x1="15" y1="65" x2="32" y2="67" stroke="#ea580c" strokeWidth="1.5" />
+            //     <line x1="85" y1="55" x2="68" y2="53" stroke="#ea580c" strokeWidth="1.5" />
+            //     <line x1="85" y1="60" x2="68" y2="60" stroke="#ea580c" strokeWidth="1.5" />
+            //     <line x1="85" y1="65" x2="68" y2="67" stroke="#ea580c" strokeWidth="1.5" />
+            //     <circle cx="30" cy="62" r="2" fill="#fbbf24" opacity="0.4" />
+            //     <circle cx="70" cy="62" r="2" fill="#fbbf24" opacity="0.4" />
+            //     <path d="M 32 42 Q 38 40 44 42" stroke="#ea580c" strokeWidth="1.5" fill="none" opacity="0.6" />
+            //     <path d="M 56 42 Q 62 40 68 42" stroke="#ea580c" strokeWidth="1.5" fill="none" opacity="0.6" />
+            // </svg>
+             <svg viewBox="0 0 100 100" className="w-full h-full filter drop-shadow-2xl">
                 <path d="M 20 30 L 10 10 L 35 25 Z" fill="#f97316" stroke="#ea580c" strokeWidth="2" />
                 <path d="M 20 28 L 15 15 L 32 26 Z" fill="#fed7aa" />
                 <path d="M 80 30 L 90 10 L 65 25 Z" fill="#f97316" stroke="#ea580c" strokeWidth="2" />
@@ -83,10 +111,66 @@
                 <circle cx="70" cy="62" r="2" fill="#fbbf24" opacity="0.4" />
                 <path d="M 32 42 Q 38 40 44 42" stroke="#ea580c" strokeWidth="1.5" fill="none" opacity="0.6" />
                 <path d="M 56 42 Q 62 40 68 42" stroke="#ea580c" strokeWidth="1.5" fill="none" opacity="0.6" />
+                <circle cx="50" cy="50" r="42" fill="none" stroke="#cbd5e1" strokeWidth="3" opacity="0.9" />
+                <circle cx="50" cy="50" r="42" fill="#e0f2fe" opacity="0.15" />
+                <ellipse cx="32" cy="30" rx="10" ry="14" fill="white" opacity="0.4" />
+                <ellipse cx="72" cy="35" rx="6" ry="10" fill="white" opacity="0.3" />
+                <ellipse cx="60" cy="20" rx="4" ry="6" fill="white" opacity="0.25" />
+                <ellipse cx="50" cy="88" rx="38" ry="8" fill="#94a3b8" stroke="#64748b" strokeWidth="2" />
+                <ellipse cx="50" cy="88" rx="33" ry="6" fill="#cbd5e1" />
+                <circle cx="18" cy="78" r="2" fill="#475569" />
+                <circle cx="82" cy="78" r="2" fill="#475569" />
+                <circle cx="28" cy="88" r="2" fill="#475569" />
+                <circle cx="72" cy="88" r="2" fill="#475569" />
+                <rect x="87" y="55" width="8" height="18" fill="#64748b" stroke="#475569" strokeWidth="1" rx="2" />
+                <circle cx="91" cy="60" r="2" fill="#ef4444" />
+                <circle cx="91" cy="66" r="2" fill="#22c55e" />
+                <circle cx="91" cy="72" r="2" fill="#3b82f6" />
+                <rect x="5" y="58" width="7" height="15" fill="#64748b" stroke="#475569" strokeWidth="1" rx="2" />
+                <rect x="7" y="61" width="3" height="2" fill="#fbbf24" opacity="0.8" />
+                <rect x="7" y="65" width="3" height="2" fill="#fbbf24" opacity="0.8" />
+                <rect x="7" y="69" width="3" height="2" fill="#fbbf24" opacity="0.8" />
             </svg>
         );
 
         const DogIcon = () => (
+            // <svg viewBox="0 0 100 100" className="w-full h-full filter drop-shadow-2xl">
+            //     <ellipse cx="25" cy="45" rx="12" ry="25" fill="#92400e" stroke="#78350f" strokeWidth="2" 
+            //             transform="rotate(-20 25 45)" />
+            //     <ellipse cx="25" cy="45" rx="7" ry="18" fill="#d97706" 
+            //             transform="rotate(-20 25 45)" />
+            //     <ellipse cx="75" cy="45" rx="12" ry="25" fill="#92400e" stroke="#78350f" strokeWidth="2" 
+            //             transform="rotate(20 75 45)" />
+            //     <ellipse cx="75" cy="45" rx="7" ry="18" fill="#d97706" 
+            //             transform="rotate(20 75 45)" />
+            //     <circle cx="50" cy="50" r="32" fill="#d97706" stroke="#92400e" strokeWidth="2" />
+            //     <ellipse cx="50" cy="62" rx="22" ry="18" fill="#fbbf24" />
+            //     <ellipse cx="50" cy="32" rx="10" ry="8" fill="#92400e" opacity="0.6" />
+            //     <ellipse cx="38" cy="45" rx="5" ry="8" fill="#422006" stroke="#1c0a00" strokeWidth="1" />
+            //     <circle cx="38" cy="43" r="2" fill="white" />
+            //     <ellipse cx="62" cy="45" rx="5" ry="8" fill="#422006" stroke="#1c0a00" strokeWidth="1" />
+            //     <circle cx="62" cy="43" r="2" fill="white" />
+            //     <ellipse cx="50" cy="58" rx="6" ry="5" fill="#1c0a00" />
+            //     <ellipse cx="48" cy="57" rx="2" ry="1.5" fill="#78350f" opacity="0.6" />
+            //     <path d="M 50 58 L 50 65" stroke="#1c0a00" strokeWidth="2" />
+            //     <path d="M 50 65 Q 42 68 38 66" stroke="#1c0a00" strokeWidth="2" fill="none" />
+            //     <path d="M 50 65 Q 58 68 62 66" stroke="#1c0a00" strokeWidth="2" fill="none" />
+            //     <ellipse cx="50" cy="70" rx="8" ry="5" fill="#ec4899" stroke="#be185d" strokeWidth="1" />
+            //     <path d="M 50 67 L 50 73" stroke="#be185d" strokeWidth="1" />
+            //     <path d="M 32 38 Q 38 36 44 38" stroke="#78350f" strokeWidth="2" fill="none" />
+            //     <path d="M 56 38 Q 62 36 68 38" stroke="#78350f" strokeWidth="2" fill="none" />
+            //     <circle cx="38" cy="62" r="1.5" fill="#92400e" opacity="0.5" />
+            //     <circle cx="42" cy="65" r="1" fill="#92400e" opacity="0.5" />
+            //     <circle cx="62" cy="62" r="1.5" fill="#92400e" opacity="0.5" />
+            //     <circle cx="58" cy="65" r="1" fill="#92400e" opacity="0.5" />
+            //     <ellipse cx="32" cy="58" rx="4" ry="3" fill="#fcd34d" opacity="0.4" />
+            //     <ellipse cx="68" cy="58" rx="4" ry="3" fill="#fcd34d" opacity="0.4" />
+            // <circle cx="15" cy="20" r="1" fill="#fbbf24" />
+            // <circle cx="85" cy="25" r="1.5" fill="#fbbf24" />
+            // <circle cx="20" cy="80" r="1" fill="#fbbf24" />
+            // <circle cx="90" cy="70" r="1" fill="#fbbf24" />
+            // <circle cx="10" cy="50" r="1.5" fill="#fbbf24" />
+            // </svg>
             <svg viewBox="0 0 100 100" className="w-full h-full filter drop-shadow-2xl">
                 <ellipse cx="25" cy="45" rx="12" ry="25" fill="#92400e" stroke="#78350f" strokeWidth="2" 
                         transform="rotate(-20 25 45)" />
@@ -118,6 +202,19 @@
                 <circle cx="58" cy="65" r="1" fill="#92400e" opacity="0.5" />
                 <ellipse cx="32" cy="58" rx="4" ry="3" fill="#fcd34d" opacity="0.4" />
                 <ellipse cx="68" cy="58" rx="4" ry="3" fill="#fcd34d" opacity="0.4" />
+                <circle cx="50" cy="50" r="40" fill="none" stroke="#cbd5e1" strokeWidth="3" opacity="0.9" />
+                <circle cx="50" cy="50" r="40" fill="#e0f2fe" opacity="0.15" />
+                <ellipse cx="35" cy="35" rx="8" ry="12" fill="white" opacity="0.4" />
+                <ellipse cx="70" cy="40" rx="5" ry="8" fill="white" opacity="0.3" />
+                <ellipse cx="50" cy="85" rx="35" ry="8" fill="#94a3b8" stroke="#64748b" strokeWidth="2" />
+                <ellipse cx="50" cy="85" rx="30" ry="6" fill="#cbd5e1" />
+                <circle cx="20" cy="75" r="2" fill="#475569" />
+                <circle cx="80" cy="75" r="2" fill="#475569" />
+                <circle cx="30" cy="85" r="2" fill="#475569" />
+                <circle cx="70" cy="85" r="2" fill="#475569" />
+                <rect x="85" y="60" width="8" height="15" fill="#64748b" stroke="#475569" strokeWidth="1" rx="2" />
+                <circle cx="89" cy="65" r="2" fill="#ef4444" />
+                <circle cx="89" cy="70" r="2" fill="#22c55e" />
             </svg>
         );
 
